   someone sent a (correct) patch, which I couldn't help but to apply.  Thanks
   Kurt!
 * On the same note, the --install option wouldn't work right either because
   we need the conf file to be loaded, but that can't happen until the
   'simple' options like --help, --version, and --author are done.  So now
   options which require an argument set a flag, and the processing is done
   later.

Version history: 0.73
 * Added support for timing a build to the program.  Each make attempt is
   timed, along with the install process, and the overall time spent trying to
   install.
 * I can't seem to find a way to separate compilation and linking with
   unsermake, so there will be no such option forthcoming.

Version history: 0.73-pre1
 * Improved autorebuilder process.  Now the module's build directory won't be
   unnecessarily cleaned.
 * Added new configuration file option make-install-prefix.
 * Added exception handling to the main loop.  You should never again have the
   script crash and then have it complain that it's still running.
 * The build process now outputs to a file called build-status in the log
   directory for that run, which reports on the success/failure of each build
   attempt.
 * Fix a bug with use-qt-builddir-hack that caused it to affect all modules
   during the build system setup instead of just qt-copy.
 * Don't add 'global' to the log directory path if we're getting the global
   log directory.
 * Script now informs you of your log directory at the end of the script run.
 * Fix infinite loop when you've disable automatic module install.
 * Added --resume and --resume-from options.

Version history: 0.72
 * qt-copy bugfix #6564: There's no reason to try to download the admin dir
   for qt-copy.
 * The workaround in 0.70 for the autorebuilding bug caused a bug of its own,
   for which I apologize.  Both bugs should now be fixed.
 * kde-common is no longer required to support checkout-only, and will no