@@ -65,7 +65,30 @@ those who either can't or don't feel like installing it.</p>
 <p id="emailaddy">It is authored by Michael Pyne (mpyne (AT) grammarian (DOT) homelinux 
 (DOT) net), and is one of several build scripts for this purpose.</p>
 
-<p><b>2004-Jun-17:</b> v$VERSION<br/>
+<p><b>2004-Jun-21:</b> v0.74<br/>
+New features:
+<ul>
+<li>When a package fails to build, the script will give the file name of the
+appropriate log file in the summary.  Some errors don't leave a log file.
+Hopefully later I'll have every error condition reported in the summary as
+well.</li>
+<li>Based on advice from Amilcar Lucas, the build system will automatically
+refresh (without scrapping the builddir) if the CVS update for a module
+detects an added Makefile.am.  This is hard to test, so I'd appreciate any
+reports on how well this is working.</li>
+</ul>
+
+Bugfixes:
+<ul>
+<li>The <a href="#cmdline-help">-h</a> option no longer prints annoying
+warnings.  Thanks to Kurt V.  Hindenburg for the patch.</li>
+<li>The <a href="#cmdline-install">--install</a> option was similarly
+afflicted.  It has also been fixed.  As of this release, the file
+successfully-build is no longer created.</li>
+</ul>
+</p>
+
+<p><b>2004-Jun-17:</b> v0.73<br/>
 New features:
 <ul>
 <li>The script now will report how long each module spent building, both in
@@ -139,6 +162,7 @@ of the script.</li>
 
 <li>The script tells you the log directory to examine after running.</li>
 </ul>
+</p>
 
 <p><b>2004-Jun-13:</b> v0.72 -- <em>This Should Work Edition&trade;</em><br/>
 Bugfixes:
@@ -170,41 +194,7 @@ the script, and now keeps me from doing stupid stuff like forgetting to
 upgrade the version number in the script, forgetting to commit my changes to
 my CVS repository, and forgetting to actually install the script to test.</li>
 </ul>
-
-<p><b>2004-Jun-12:</b> v0.71<br/>
-This release is dedicated to the heavy testing given the script by berkus and
-mornfall.  Thanks guys!
 </p>
-
-Bugfixes:
-<ul>
-<li>Make script header documentation better.</li>
-<li>Force configure to run if qt-copy hasn't been configured.  If you had
-interrupted the build process for qt-copy before the configure script had run,
-it wouldn't build right after that.</li>
-</ul>
-
-New features:
-<ul>
-<li>If the admin directory does not exist for some reason, kick CVS in the
-head repeatedly until it checks it out. (I'm not responsible if CVS ends up in
-a coma).</li>
-
-<li>Accept GPL license by default for qt-copy.  If you happen to have a
-commerical license or some such for qt-copy, patches are accepted. :-)</li>
-
-<li>Debug mode additions.</li>
-
-<li>Experimental mode to simulate builddir != srcdir mode for qt-copy, as
-requested by berkus.  This needs more testing, but it seems to Work For
-Me&trade;.  The appropriate configuration file option is <a
-href="#conf-use-qt-builddir-hack">use-qt-builddir-hack</a>.</li>
-
-<li>The script now creates a symlink to the latest log directory called
-<tt>latest</tt>.  So you can always review the log of the last day the script
-ran in by browsing $(cvs-root)/log/latest.</li>
-
-</ul>
 
 <p>I recommend that you set up a separate user account if you decide to run KDE
 from CVS.  I didn't at first, and I won't repeat that mistake for KDE 3.3 ;-).
@@ -841,7 +831,7 @@ href="#options">.kdecvs-buildrc options</a>.
 <div align="center" class="thankyou">
 <font size="-1"><a href="http://www.cvsup.org/">CVSup</a> is a registered trademark of John D. Polstra.
 <br/>
-Last modified: Thu Jun 17 22:50:35 2004</font>
+Last modified: Mon Jun 21 14:52:14 2004</font>
 </div>
 </body>
 </html>
