@@ -8,6 +8,10 @@ Version history: 0.74
    'simple' options like --help, --version, and --author are done.  So now
    options which require an argument set a flag, and the processing is done
    later.
+ * Add feature for Amilcar, failed packages will display the path to the
+   appropriate log file.
+ * Another feature, automatically refresh build system if a Makefile.am is
+   added.
 
 Version history: 0.73
  * Added support for timing a build to the program.  Each make attempt is
